# server-images

./: .gitignore  LICENSE  MODULE.bazel  README.md
.github/workflows/: all.yml  counterstrikesource.yml  hiddensource.yml  left4dead2.yml  quake3.yml  satisfactory.yml  sourceforts.yml
counterstrikesource/: BUILD.bazel  README.md  entrypoint.sh  server.cfg
hiddensource/: BUILD.bazel  README.md  entrypoint.sh  metamod.vdf  server.cfg
left4dead2/: BUILD.bazel  README.md  entrypoint.sh  server.cfg
quake3/: BUILD.bazel  README.md  entrypoint.sh  mapcycle.cfg
satisfactory/: BUILD.bazel  README.md  entrypoint.sh
sourceforts/: BUILD.bazel  entrypoint.sh  server.cfg
