module(name = "servers")

bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_oci", version = "2.0.0")
bazel_dep(name = "rules_steam")
git_override(
    module_name = "rules_steam",
    commit = "71adf34ce0808616f980095913db893920e1cadb",
    remote = "https://github.com/lanofdoom/rules_steam.git",
)

#
# Steam Dependencies
#

steam = use_extension("@rules_steam//:steam.bzl", "steam")

# Counter Strike: Source
steam.app(name = "counter_strike_source", app = "232330")
use_repo(steam, "counter_strike_source")

# Hidden: Source
steam.app(name = "srcds_base_2006_windows", app = "215", os = "windows")
use_repo(steam, "srcds_base_2006_windows")

steam.app(name = "srcds_windows", app = "205", os = "windows")
use_repo(steam, "srcds_windows")

# Left 4 Dead 2
steam.app(name = "left4dead2", app = "222860")
use_repo(steam, "left4dead2")

# Satisfactory
steam.app(name = "satisfactory", app = "1690800")
use_repo(steam, "satisfactory")

# SourceForts
steam.app(name = "srcds_base_2013", app = "244310")
use_repo(steam, "srcds_base_2013")

#
# Base Images
#

# Base image for 64-bit servers
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "debian",
    image = "docker.io/library/debian",
    platforms = ["linux/amd64"],
    tag = "bookworm-slim",
)
use_repo(oci, "debian", "debian_linux_amd64")

# Base image for 32-bit servers
oci.pull(
    name = "debian_i386",
    tag = "bookworm-slim",
    image = "docker.io/i386/debian",
)
use_repo(oci, "debian_i386")

#
# File Dependencies
#

# Use HTTP rules
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

# Linux SRCDS Dependencies
http_file(
    name = "auth_by_steam_group_linux",
    downloaded_file_path = "auth_by_steam_group.tar.gz",
    sha256 = "95cb0dd02c46e81594d08edd6456ca2d929b3768235deedf8b8397aa05c1ee1f",
    urls = ["https://github.com/lanofdoom/auth-by-steam-group/releases/download/v2.3.0/auth_by_steam_group.tar.gz"],
)

http_file(
    name = "metamod_linux",
    downloaded_file_path = "metamod.tar.gz",
    sha256 = "b7fc903755bb3f273afd797b36e94844b828e721d291d2a7519eecad3fa8486c",
    urls = ["https://mms.alliedmods.net/mmsdrop/1.11/mmsource-1.11.0-git1145-linux.tar.gz"],
)

http_file(
    name = "sourcemod_linux",
    downloaded_file_path = "sourcemod.tar.gz",
    sha256 = "9f59ddf32a649695e4c7dac0dfebdc382590486e60ff6473d7b87a31b6bfa01b",
    urls = ["https://sm.alliedmods.net/smdrop/1.10/sourcemod-1.10.0-git6529-linux.tar.gz"],
)

# Windows SRCDS Dependencies
http_archive(
    name = "auth_by_steam_group_windows",
    sha256 = "2ce9f93038773affe8d7c7acc4fe156735f095f287889cafeb07fb78f512007d",
    urls = ["https://github.com/lanofdoom/auth-by-steam-group/releases/download/v2.3.0/auth_by_steam_group.zip"],
    build_file_content = "filegroup(name = \"all\", srcs = glob(include = [\"**/*\"], exclude = [\"WORKSPACE\", \"BUILD.bazel\"]), visibility = [\"//visibility:public\"])",
)

http_archive(
    name = "metamod_windows",
    sha256 = "764ef206a00768dc6810ff7344dfabd7b2d8ab4b3d426c5fad49d4818ac3228d",
    urls = ["https://mms.alliedmods.net/mmsdrop/1.11/mmsource-1.11.0-git1145-windows.zip"],
    build_file_content = "filegroup(name = \"all\", srcs = glob(include = [\"**/*\"], exclude = [\"WORKSPACE\", \"BUILD.bazel\"]), visibility = [\"//visibility:public\"])",
)

http_archive(
    name = "sourcemod_windows",
    sha256 = "1361a2df2b98658c88adb1793fdc152926180ed6c04f7d36457b7de4f8c0c415",
    urls = ["https://sm.alliedmods.net/smdrop/1.10/sourcemod-1.10.0-git6528-windows.zip"],
    build_file_content = "filegroup(name = \"all\", srcs = glob(include = [\"**/*\"], exclude = [\"WORKSPACE\", \"BUILD.bazel\"]), visibility = [\"//visibility:public\"])",
)

# Counter Strike: Source Dependencies
http_file(
    name = "disable_buyzones",
    downloaded_file_path = "disable_buyzones.tar.gz",
    sha256 = "20a376c6e1acc54f646fa9f551f130e1cd18e8d4b2183e9ba21acabb88c38721",
    urls = ["https://github.com/lanofdoom/counterstrikesource-disable-buyzones/releases/download/v1.0.0/lan_of_doom_disable_buyzones.tar.gz"],
)

http_file(
    name = "disable_radar",
    downloaded_file_path = "disable_radar.tar.gz",
    sha256 = "2e84c3d37e8f44a9e562d4d94d43459c1c41c43ec776542a4cc7558a0487b6b8",
    urls = ["https://github.com/lanofdoom/counterstrikesource-disable-radar/releases/download/v1.0.0/lan_of_doom_disable_radar.tar.gz"],
)

http_file(
    name = "disable_round_timer",
    downloaded_file_path = "disable_round_timer.tar.gz",
    sha256 = "9655ab21ac776ce87f2e8540fbe520a7ed093ecf8cb51fb99a081d8284eabb03",
    urls = ["https://github.com/lanofdoom/counterstrikesource-disable-round-timer/releases/download/v1.0.1/lan_of_doom_disable_round_timer.tar.gz"],
)

http_file(
    name = "ffa_spawns",
    downloaded_file_path = "ffa_spawns.tar.gz",
    sha256 = "707056ff3b7aabbcca0bcae62eca55a4969dc8df0c1f7bae817567c0fe73e6b0",
    urls = ["https://github.com/lanofdoom/counterstrikesource-ffa-spawns/releases/download/v1.0.1/lan_of_doom_ffa_spawns.tar.gz"],
)

http_file(
    name = "free_for_all",
    downloaded_file_path = "free_for_all.tar.gz",
    sha256 = "22f9f842d6a47af06b769368b46478b6a96e9624e3d06cfb41c3d0786752a4b0",
    urls = ["https://github.com/lanofdoom/counterstrikesource-free-for-all/releases/download/v1.0.0/lan_of_doom_ffa.tar.gz"],
)

http_file(
    name = "gungame",
    downloaded_file_path = "lan_of_doom_gungame.tar.gz",
    sha256 = "6d58de8f681424b2b70b2c896912087a2fe84901a6026cea86fa27948dcdda11",
    urls = ["https://github.com/lanofdoom/counterstrikesource-gungame/releases/download/v1.0.2/lan_of_doom_gungame.tar.gz"],
)

http_file(
    name = "maps",
    downloaded_file_path = "maps.tar.gz",
    sha256 = "d46c07b3e3ad4177cb7c387d2b52b270ba4c4a677df1f937037e2363230f6965",
    urls = ["https://github.com/lanofdoom/counterstrikesource-maps/releases/download/v6.1.0/maps.tar.gz"],
)

http_file(
    name = "map_settings",
    downloaded_file_path = "map_settings.tar.gz",
    sha256 = "1e16ed149806bdda69d618cacd3c2cea3d60bd99fd856173d6f9b061a68c3892",
    urls = ["https://github.com/lanofdoom/counterstrikesource-map-settings/releases/download/v1.7.0/lan_of_doom_map_settings.tar.gz"],
)

http_file(
    name = "max_cash",
    downloaded_file_path = "max_cash.tar.gz",
    sha256 = "98a9f6fec86928e29ce9dd4eff715a69efb9adbc75df26f2b2ccae7b3bc387ae",
    urls = ["https://github.com/lanofdoom/counterstrikesource-max-cash/releases/download/v1.0.0/lan_of_doom_max_cash.tar.gz"],
)

http_file(
    name = "paintball",
    downloaded_file_path = "paintball.tar.gz",
    sha256 = "cd5d0d9debe0aa2724dfeffa193d27dff69f880493d56bf67146ee2cf65fd682",
    urls = ["https://github.com/lanofdoom/counterstrikesource-paintball/releases/download/v0.9.0/lan_of_doom_paintball.tar.gz"],
)

http_file(
    name = "remove_objectives",
    downloaded_file_path = "remove_objectives.tar.gz",
    sha256 = "5f6c84e6b4e5da1f07d256edef1ec7ad8a1db92247c12e74d6d22d6fd1186254",
    urls = ["https://github.com/lanofdoom/counterstrikesource-remove-objectives/releases/download/v1.0.0/lan_of_doom_remove_objectives.tar.gz"],
)

http_file(
    name = "respawn",
    downloaded_file_path = "respawn.tar.gz",
    sha256 = "194b158a9b9cdbd790021ceec1f5d5ece3edd5a1cee34e76d5e198abc93ab797",
    urls = ["https://github.com/lanofdoom/counterstrikesource-respawn/releases/download/v1.0.0/lan_of_doom_respawn.tar.gz"],
)

http_file(
    name = "spawn_protection",
    downloaded_file_path = "spawn_protection.tar.gz",
    sha256 = "ae1a845ccd579832f7a3af44c9821957d01816cedbcdf7a8cb26c4e16f3ed5f5",
    urls = ["https://github.com/lanofdoom/counterstrikesource-spawn-protection/releases/download/v1.0.0/lan_of_doom_spawn_protection.tar.gz"],
)

# Hidden: Source Dependencies
http_archive(
    name = "hidden",
    sha256 = "ae73d35c42a8521dc0c0ebda99e85f3e731176d04abeb7c6263ca4bca0cfe7ae",
    urls = ["http://www.hidden-source.com/downloads/hsb4b-full.zip"],
    build_file_content = "filegroup(name = \"all\", srcs = glob(include = [\"**/*\"], exclude = [\"WORKSPACE\", \"BUILD.bazel\"]), visibility = [\"//visibility:public\"])",
)

# Sourceforts Dependencies
http_file(
    name = "sourceforts",
    downloaded_file_path = "sourceforts.tar.gz",
    sha256 = "3d979831c178c4c70f8106816ae8c1dc4452f5a41a463499230cbc1bcea8a6b9",
    urls = ["https://github.com/lanofdoom/sourceforts-server/releases/download/v1.0-RC7/SFClassic-1.0-RC7-fix.tar.gz"],
)
